// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Individual Restrictions Component should render 24h title 1`] = `
<Modal__StyledModal>
  <Body>
    <h1
      className="pui-h2"
    >
      Configure Daily Trade Volume Restriction
    </h1>
    <h3
      className="pui-h3"
    >
      The volume restriction can be specified in number of tokens or as a percentage of total supply and will be enforced only between the Start date and time and the End date and time.
    </h3>
    <Remark
      title="Note"
    >
      — Volume restrictions do not apply to primary issuance, only to secondary trades.
      <br />
      — The Global Restriction applies to each Investor individually, not the aggregate of all sales across all investors within the period.
    </Remark>
    <Connect(WithFormik(AddGlobalRestrictionsComponent))
      restrictionType="24h"
    />
  </Body>
</Modal__StyledModal>
`;

exports[`Individual Restrictions Component should render custom title 1`] = `
<Modal__StyledModal>
  <Body>
    <h1
      className="pui-h2"
    >
      Configure Custom Trade Volume Restriction
    </h1>
    <h3
      className="pui-h3"
    >
      The volume restriction can be specified in number of tokens or as a percentage of total supply and will be enforced only between the Start date and time and the End date and time.
    </h3>
    <Remark
      title="Note"
    >
      — Volume restrictions do not apply to primary issuance, only to secondary trades.
      <br />
      — The Global Restriction applies to each Investor individually, not the aggregate of all sales across all investors within the period.
    </Remark>
    <Connect(WithFormik(AddGlobalRestrictionsComponent))
      restrictionType="custom"
    />
  </Body>
</Modal__StyledModal>
`;
